# openhrcore

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e2df73d1ab13_init_user.py
backend/app/: cli.py  main.py  models_registry.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  error_handlers.py  exceptions.py  logging.py  middleware.py  pagination.py  repository.py  security.py  sorting.py
backend/app/features/user/: __init__.py  deps.py  models.py  repository.py  router.py  schema.py  service.py
backend/src/: config.py  main.py  seed.py  worker.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 0001_initial.py  0002_add_password_hash.py  0003_add_dynamic_roles.py
backend/src/modules/admin/: __init__.py  permissions.py  schemas.py  service.py
backend/src/modules/admin/api/: __init__.py  auth.py  roles.py  tenant.py  users.py
backend/src/modules/ai/: __init__.py  service.py
backend/src/modules/ai/engine/: __init__.py  base.py  factory.py  openai_engine.py
backend/src/modules/ai/schemas/: __init__.py  screening.py
backend/src/modules/recruitment/api/: __init__.py  applications.py  candidates.py  documents.py  jobs.py  notes.py  pipelines.py  screening.py
backend/src/modules/recruitment/domain/: __init__.py  models.py
backend/src/modules/recruitment/repository/: __init__.py  application.py  base.py  candidate.py  document.py  job_opening.py  note.py  pipeline.py  screening.py  stage_transition.py
backend/src/modules/recruitment/schemas/: __init__.py  application.py  candidate.py  document.py  job_opening.py  note.py  pipeline.py  screening.py
backend/src/modules/recruitment/service/: __init__.py  application_service.py  candidate_service.py  document_service.py  job_opening_service.py  note_service.py
backend/src/modules/recruitment/tasks/: __init__.py  screening_task.py
backend/src/modules/workflow/: __init__.py
backend/src/modules/workflow/service/: __init__.py  pipeline_service.py
backend/src/shared/auth/: __init__.py  dependencies.py  models.py
backend/src/shared/common/: __init__.py  error_handlers.py  exceptions.py  pagination.py  schemas.py
backend/src/shared/database/: __init__.py  base.py  session.py
backend/src/shared/storage/: __init__.py  client.py
backend/tests/: conftest.py
backend/tests/functional/features/user/: test_user_service.py
backend/tests/integration/features/user/: test_user_api.py
backend/tests/unit/core/: test_pagination.py  test_security.py  test_sorting.py
backend/tests/unit/features/user/: test_compile_filters.py  test_schema.py
frontend/: DESIGN_CONCEPT.md  README.md  index.html  jsconfig.json  (+6 more)
(+237 files in other folders)
